<resources>
    <string name="app_name">FIRST Team Scouter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_button_view_team_data">View Team</string>
    <string name="text_button_manage_data">Manage Data</string>
    <string name="text_button_import_match_data">Import Match Data</string>
    <string name="text_button_enter_data">Enter Data</string>
    <string name="text_button_select_match">Select Match</string>
    <string name="text_button_scout_match">Scout A Match</string>
    <string name="text_button_submit_team_match">Submit</string>
    <string name="text_button_score">Score</string>
    <string name="text_button_hi_score">Hi Score</string>
    <string name="text_button_lo_score">Lo Score</string>
    <string name="text_button_hot_score">Hot</string>
    <string name="text_button_cold_score">Cold</string>
    <string name="text_button_miss_score">Miss</string>
    <string name="text_button_hi_miss">Hi Miss</string>
    <string name="text_button_lo_miss">Lo Miss</string>
    <string name="text_button_auto_move">Move</string>
    <string name="text_button_auto_collect">Collect</string>
    <string name="text_button_auto_defend">Defend</string>
    <string name="text_button_truss_toss">Truss Toss</string>
    <string name="text_button_truss_miss">Truss Miss</string>
    <string name="text_button_catch_caught">Toss Catch</string>
    <string name="text_button_catch_miss">Toss Miss</string>
    <string name="text_button_red">Red</string>
    <string name="text_button_white">White</string>
    <string name="text_button_blue">Blue</string>
    <string name="text_button_goal">Goal</string>
    <string name="text_button_long_pass">Long Pass</string>
    <string name="text_button_long_pass_miss">LPass Miss</string>
    <string name="text_button_short_pass">Short Pass</string>
    <string name="text_button_short_pass_miss">SPass Miss</string>
    <string name="text_button_Undo">Undo</string>
    <string name="title_activity_enter_team_match_data">Enter Team Match Data</string>
    <string name="title_activity_team_informatrion">Team Information</string>
    <string name="title_activity_view_data">View Data</string>
    <string name="label_scouting_team">You Are Scouting Team #</string>
    <string name="label_team_number">Team #: </string>
    <string name="label_team_name">Team Name: </string>
    <string name="label_team_location">Team Location: </string>
    <string name="label_number_team_members">Number of Team Members: </string>
    <string name="label_match_number">Match #: </string>
    <string name="label_auto_mode">Auto Mode: </string>
    <string name="label_auto_score">Auto Score: </string>
    <string name="label_auto_hi">Auto Hi</string>
    <string name="label_auto_lo">Auto Lo</string>
    <string name="label_tele_mode">Tele Mode: </string>
    <string name="label_tele_hi">Tele Hi</string>
    <string name="label_tele_lo">Tele Lo</string>
    <string name="label_tele_score">Tele Score: </string>
    <string name="label_final_score">Final Score: </string>
    <string name="label_offense">Offense</string>
    <string name="label_defense">Defense</string>
    <string name="label_possess">Possess</string>
    <string name="label_defend">Defend</string>
    <string name="label_team_match_notes">Match Notes: </string>
    <string name="label_team_notes">Team Notes: </string>
    <string name="label_save">Save</string>
	<string name="text_default_team_select">Enter a new Team</string>
	<string name="text_button_view_match_data">View Match Data</string>
	<string name="title_activity_team_data_list">Team Data</string>
	<string name="title_activity_import_match_data">Import Match Data</string>
	<string name="title_activity_team_match_list">Select the Match &amp; Team</string>
	<string name="text_button_delete_team">Delete Team</string>
	<string name="text_button_start_left">Left</string>
	<string name="text_button_start_left_center">Left Center</string>
	<string name="text_button_start_center">Center</string>
	<string name="text_button_start_right_center">Right Center</string>
	<string name="text_button_start_right">Right</string>
	<string name="text_button_start_goal">Goal</string>
</resources>
