<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/starting_position_background_800_367"
    android:orientation="vertical"
    android:paddingTop="2dp" >

        <ToggleButton
            android:id="@+id/btnStartGoal"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:background="@drawable/toggle_drawable_outline"
            android:text="@string/text_button_start_goal"
            android:textOff="@string/text_button_start_goal"
            android:textOn="@string/text_button_start_goal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp" >
            
		    <ToggleButton
		        android:id="@+id/btnStartLeft"
		        android:layout_width="120dp"
		        android:layout_height="120dp"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:layout_gravity="center"
		        android:layout_marginLeft="20dp"
		        android:layout_marginRight="65dp"
		        android:background="@drawable/toggle_drawable_outline"
		        android:text="@string/text_button_start_left"
		        android:textOff="@string/text_button_start_left"
		        android:textOn="@string/text_button_start_left" />
		
		    <ToggleButton
		        android:id="@+id/btnStartCenter"
		        android:layout_width="120dp"
		        android:layout_height="120dp"
		        android:layout_centerHorizontal="true"
		        android:layout_centerVertical="true"
		        android:layout_gravity="center"
		        android:layout_marginRight="65dp"
		        android:background="@drawable/toggle_drawable_outline"
		        android:text="@string/text_button_start_center"
		        android:textOff="@string/text_button_start_center"
		        android:textOn="@string/text_button_start_center" />

		   <ToggleButton
		       android:id="@+id/btnStartRight"
		       android:layout_width="120dp"
		       android:layout_height="120dp"
		       android:layout_alignParentRight="true"
		       android:layout_centerVertical="true"
		       android:layout_marginRight="20dp"
		       android:background="@drawable/toggle_drawable_outline"
		       android:text="@string/text_button_start_right"
		       android:textOff="@string/text_button_start_right"
		       android:textOn="@string/text_button_start_right" />

		   <ToggleButton
		       android:id="@+id/btnStartRightCenter"
		       android:layout_width="120dp"
		       android:layout_height="120dp"
		       android:layout_centerVertical="true"
		       android:layout_marginRight="65dp"
		       android:layout_toRightOf="@+id/btnStartCenter"
		       android:background="@drawable/toggle_drawable_outline"
		       android:text="@string/text_button_start_right_center"
		       android:textOff="@string/text_button_start_right_center"
		       android:textOn="@string/text_button_start_right_center" />

		   <ToggleButton
		       android:id="@+id/btnStartLeftCenter"
		       android:layout_width="120dp"
		       android:layout_height="120dp"
		       android:layout_alignParentTop="false"
		       android:layout_centerVertical="true"
		       android:layout_marginRight="65dp"
		       android:layout_toRightOf="@+id/btnStartLeft"
		       android:background="@drawable/toggle_drawable_outline"
		       android:text="@string/text_button_start_left_center"
		       android:textOff="@string/text_button_start_left_center"
		       android:textOn="@string/text_button_start_left_center" />

		</RelativeLayout>
</LinearLayout>
