<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="fill_horizontal"
    android:alignmentMode="alignBounds"
    android:columnCount="2"
    android:columnOrderPreserved="true"
    android:orientation="horizontal"
    android:rowCount="2"
    android:visibility="visible"
    tools:context=".TeamInformationActivity" >

    <TextView
        android:id="@+id/lblTeamInfoTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:layout_row="0"
        android:layout_rowSpan="1"
        android:gravity="center_horizontal"
        android:text="@string/title_activity_team_informatrion"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="@dimen/data_field_container_width"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal|fill_vertical"
        android:layout_row="1"
        android:alignmentMode="alignBounds"
        android:columnCount="4"
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:rowCount="7"
        android:rowOrderPreserved="true" >

        <TextView
            android:id="@+id/lbl_TMInfo_TeamNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:text="@string/label_team_number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtTeamNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="left"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:ems="10"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="visible" />

        <TextView
            android:id="@+id/lblMatchNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="2"
            android:layout_rowSpan="1"
            android:text="@string/label_team_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtTeamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="left"
            android:layout_row="2"
            android:layout_rowSpan="1"
            android:ems="10"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/lblTeamLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="left"
            android:layout_row="3"
            android:layout_rowSpan="1"
            android:text="@string/label_team_location"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtTeamLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="left"
            android:layout_row="3"
            android:layout_rowSpan="1"
            android:ems="10"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/lblNumTeamMembers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="left"
            android:layout_row="4"
            android:layout_rowSpan="1"
            android:paddingRight="5dp"
            android:text="@string/label_number_team_members"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtNumTeamMembers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="left"
            android:layout_row="4"
            android:layout_rowSpan="1"
            android:ems="10"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </GridLayout>

    <RelativeLayout
        android:id="@+id/relativeLO_TeamNotes"
        android:layout_width="@dimen/note_container_width"
        android:layout_height="340dp"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_row="1"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingBottom="25dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp" >

        <TextView
            android:id="@+id/lblTeamNotes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/label_team_notes"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtTeamNotes"
            android:layout_width="fill_parent"
            android:layout_height="225dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/lblTeamNotes"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:gravity="top|left|fill_horizontal"
            android:inputType="textMultiLine"
            android:minLines="12" />

        <Button
            android:id="@+id/btnTeamInfoSave"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentTop="false"
            android:layout_below="@id/txtTeamNotes"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginTop="10dp"
            android:maxHeight="60dp"
            android:maxWidth="96dp"
            android:onClick="btnSaveOnClick"
            android:text="@string/label_save" />

        <Button
            android:id="@+id/btnDeleteTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnTeamInfoSave"
            android:layout_alignBottom="@+id/btnTeamInfoSave"
            android:layout_alignParentRight="true"
            android:text="@string/text_button_delete_team" />

    </RelativeLayout>

</GridLayout>