<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:baselineAligned="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin" >

        <Button
            android:id="@+id/btnSelectMatchTeam"
            android:layout_width="fill_parent"
            android:layout_height="320dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:minHeight="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:text="@string/text_button_select_match"
            android:textStyle="bold"
            android:typeface="normal" />

    </LinearLayout>

	<LinearLayout
	    style="@style/AppTheme"
	    android:layout_width="0dp"
	    android:layout_height="match_parent"
	    android:layout_weight="0.5"
	    android:orientation="vertical"
	    android:paddingLeft="@dimen/activity_vertical_margin"
	    android:paddingRight="@dimen/activity_vertical_margin"
	    tools:context=".MainActivity" >

	    <Button
	        android:id="@+id/btnViewTeamData"
	        android:layout_width="fill_parent"
	        android:layout_height="225dp"
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="10dp"
	        android:minHeight="@dimen/activity_vertical_margin"
	        android:text="@string/text_button_view_team_data"
	        android:textStyle="bold"
	        android:typeface="normal" />

	    <Button
	        android:id="@+id/btnViewMatchData"
	        android:layout_width="fill_parent"
	        android:layout_height="75dp"
	        android:layout_marginTop="10dp"
	        android:minHeight="@dimen/activity_vertical_margin"
	        android:text="@string/text_button_import_match_data"
	        android:textStyle="bold"
	        android:typeface="normal" />

    </LinearLayout>

</LinearLayout>
